<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bucket Buddy</string>
    <string name="action_settings">Settings</string>
    <string name="mainTeamBtn">Teams</string>
    <string name="mainHelpBtn">Help</string>
    <string name="mainAboutBtn">About</string>
    <string name="mainDeleteDbBtn">Delete Database</string>

    <string name="teamList_create_btn">Create Team</string>

    <string name="aboutTxt">"Bucket Buddy" was idealized as a project for the class CS495 at
        The University of Alabama taking into consideration basketball fans and professionals in
        the area who want to keep personal data about their favorite teams.</string>
    <string name="aboutBios">https://jasonnance.github.io/bucketbuddy/bio.html</string>

    <string name="reallyDeleteDb">Are you sure you want to delete the database?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deleteDb">Delete Database</string>

    <string name="points">Points</string>
    <string name="rebounds">Rebounds</string>
    <string name="assists">Assists</string>

    <string name="help_title_create_team">Creating a team:</string>
    <string name="help_explain_create_team">Step 1. From the Main Menu, press \"TEAMS\". \n \nStep 2.
        From the Teams screen, press \"CREATE TEAM\". \n \nStep 3. From the Create Team screen,
        enter your desired team name and press \"SUBMIT\".  \n\n(At this point your team is created
        and you will be taken to the Edit Team screen where you can add players and edit the team name.)</string>
    <string name="help_title_create_player">Creating a player:</string>
    <string name="help_explain_create_player">(You must have a team created before you can create a player.)
        \n\nStep 1. If you are at the Teams screen, go to step 4. If you are not at the Teams screen,
        go to step 2.\n\nStep 2. From the Main Menu, press \"TEAMS\".\n\nStep 3. From the Teams screen,
        locate the team you want to add the player to and press the pencil icon to the right of that
        team.\n\nStep 4. From the Edit Team screen, press \"ADD PLAYER\".\n\nFrom the Create Player
        screen, type the name of the player and press \"SUBMIT\".\n\n(At this point your player has
        been created and associated with the team from which you added the player. You will be taken
        to the Edit Player screen where you can set his/her number and position.)</string>
    <string name="help_title_edit">Editing teams and players:</string>
    <string name="help_explain_edit">Step 1. From the Main Menu, press \"TEAMS\".\n\nStep 2. To edit
        a team, press the pencil icon next to the team you wish to edit.\n\nStep 3. To edit a player,
        press the down arrow to the left of the team that the player is on to expand the options for
        that teams\' players and press the pencil icon next to the desired player.</string>
    <string name="help_title_start">Starting a game:</string>
    <string name="help_explain_start">Step 1. From the Main Menu, press \"TEAMS\".\n\nStep 2. Locate
        your desired team and press the basketball backboard icon. You will be taken to the Select Season
        screen.\n\nStep 3. From the drop down menu, select either the most recent season or \"New Season\"
        (Make sure you want to start a new season before choosing \"New Season\" because stats are
        aggregated based on season, you can only play games with the most recent season, and you cannot
        undo creating a new season.) and press \"START GAME\".\n\nStep 4. You should be at the game
        screen with the \"Select Lineup\" dialogue box showing and all of the players checked. Uncheck
        all players that will not be playing at the start of the game and press \"OK\".\n\nStep 5.
        Give yourself a pat on the back, you just started a game.</string>
    <string name="help_title_play">Playing a game (interacting with the game screen):</string>
    <string name="help_explain_play">Once you have started a game, you can interact with the Game screen
        to record events that have occurred in the game. The events that you record will be saved as
        statistics. You can always change your teams current lineup by pressing \"Current Lineup\"
        above the interactive half-court image.
    \n\nOpponent events:\tThe only type of event from opponents that you can record are points scored.
        This is the button on the bottom right of the Game screen named \"Opp. Score\". Once you
        press the button, you will be prompted to select 1, 2, or 3 points which will update the
        opponents score.
    \n\nField Goals:\tTo record a field goal attempt (whether it was made or missed) for a player on
        your team, press the location on the interactive half-court image on the Game Screen. You will
        be prompted to select the player, then whether or not the shot was made. Once this is complete
        the score and associated stats
        (including the location of the attempt) will be updated accordingly.\n\nUpdating Other Stats:\t
        The rest of the events are located at the bottom of the screen and, once you press an event,
        you will be prompted for similar information as recording field goals.</string>
    <string name="help_title_viewStats">Viewing statistics:</string>
    <string name="help_explain_viewStats">
        Step 1. From the Main Menu, press \"Teams\".\n\nStep 2. To view
        team stats, press the chart icon next to the team you wish to edit.\n\nStep 3. To view
        player statistics, press the down arrow to the left of the team that the player is on to
        expand the options for that teams\' players and press the chart icon next to the desired
        player. (At this point, you should be on the View Stats screen. You can view different stats
        by pressing the down arrow under the chart which will display a list of stats that you can
        view.)</string>
    <string name="help_title_deleteDB">About the database:</string>
    <string name="help_explain_deleteDB">
        Team and player information, including statistics, is stored locally in a database on your
        device. You can delete teams or players from the database by pressing the \'X\' button
        next to the team or player on the Teams screen. You can also delete the entire database
        from the Main Menu by pressing \"Delete Database\". (Note: Once you delete the database,
        all of the team and player information will be gone forever. You will be asked to confirm
        if you want to delete the database.)</string>

    <string name="title_activity_create_team">Create a Team</string>
    <string name="title_activity_create_player">Create a Player</string>
    <string name="title_activity_edit_team">Edit a Team</string>
    <string name="title_activity_edit_player">Edit a Player</string>
    <string name="title_activity_view_entity_stats">View Stats</string>
    <string name="viewStatus">ViewStats</string>
    <string name="editTeam">EditTeam</string>
    <string name="btViewPlayerStats"> ViewStats</string>
    <string name="btEditPlayer">Edit Player </string>
    <string name="gamescreen_settings">Settings</string>
    <string name="gamescreen_lineup">Current Lineup</string>
    <string name="change_lineup_failure">There must be 5 players in the lineup</string>
    <string name="deletePlayer">Delete Player</string>
    <string name="reallyDeletePlayer">Are you sure you want to delete the player?</string>
    <string name="deleteTeam">Delete Team</string>
    <string name="reallyDeleteTeam">Are you sure you want to delete the team?</string>
    <string name="endGame">End Game</string>
    <string name="reallyEndGame">Are you sure you want to end the game?</string>
    <string name="teamName">Medium Text</string>
    <string name="title_activity_select_season">Select Season</string>
    <string name="newSeason">New Season</string>
    <string name="season">Season</string>
    <string name="games">Game(s)</string>
    <string name="start_game">Start Game</string>
    <string name="credit_stat_title">Credit a Stat</string>
    <string name="set_lineup_title">Select Lineup</string>
    <string name="end_game">End Game</string>
    <string name="opponent">Opponent</string>
    <string name="team_name">Team Name</string>
    <string name="rebound">Rebound</string>
    <string name="assist">Assist</string>
    <string name="free_throw">Free Throw</string>
    <string name="block">Block</string>
    <string name="steal">Steal</string>
    <string name="turnover">Turnover</string>
    <string name="foul">Foul</string>
    <string name="opponent_score">Opp. Score</string>
    <string name="set_point_value">Set Point Value</string>
    <string name="prompt_make">Did the player make the shot?</string>

    <string name="title_activity_help">Help</string>

    <string name="title_activity_view_entity_stats_tabbed">View Stats</string>

    <string name="title_statsgraph">Stats Graph</string>
    <string name="title_shotchart">Shot Chart</string>

    <string name="title_activity_testtab">testtab</string>
    <string name="title_activity_help_create_team">Help: Creating and Editing</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_help_game_screen">HelpGameScreen</string>

    <string name="career">Career</string>


</resources>
