<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.cs495.bucketbuddy.Help"
    android:background="#CC3300"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/scrollView_1" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/help_title_create_team"
            android:id="@+id/textView7"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="#0000ff"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/help_explain_create_team"
            android:id="@+id/textView8"
            android:layout_below="@+id/textView7"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/help_title_create_player"
            android:id="@+id/textView9"
            android:layout_below="@+id/textView8"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="#0000ff"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/help_explain_create_player"
            android:id="@+id/textView10"
            android:layout_below="@+id/textView9"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/textView8"
            android:layout_alignEnd="@+id/textView8"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/help_title_edit"
            android:id="@+id/textView11"
            android:layout_below="@+id/textView10"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="#0000ff"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/help_explain_edit"
            android:id="@+id/textView12"
            android:layout_below="@+id/textView11"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/textView8"
            android:layout_alignEnd="@+id/textView8"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:textColor="#ffffff" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/help_title_start"
            android:id="@+id/textView13"
            android:layout_below="@+id/textView12"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="#0000ff"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/help_explain_start"
            android:id="@+id/textView14"
            android:layout_below="@+id/textView13"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/help_title_play"
            android:id="@+id/textView15"
            android:layout_below="@+id/textView14"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="#0000ff"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/help_explain_play"
            android:id="@+id/textView16"
            android:layout_below="@+id/textView15"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/textView14"
            android:layout_alignEnd="@+id/textView14"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:textColor="#ffffff"
            android:singleLine="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/help_title_viewStats"
            android:id="@+id/textView17"
            android:layout_below="@+id/textView16"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="#0000ff"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/help_explain_viewStats"
            android:id="@+id/textView18"
            android:layout_below="@+id/textView17"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/textView14"
            android:layout_alignEnd="@+id/textView14"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:textColor="#ffffff"
            android:singleLine="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/help_title_deleteDB"
            android:id="@+id/textView19"
            android:layout_below="@+id/textView18"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="#0000ff"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/help_explain_deleteDB"
            android:id="@+id/textView20"
            android:layout_below="@+id/textView19"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/textView14"
            android:layout_alignEnd="@+id/textView14"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:textColor="#ffffff"
            android:singleLine="false" />
    </RelativeLayout>
</ScrollView>