<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.cs495.bucketbuddy.HelpGameScreen"
    android:background="#CC3300">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView_2" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/help_title_start"
                android:id="@+id/textView13"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="#0000ff"
                android:layout_marginTop="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/help_explain_start"
                android:id="@+id/textView14"
                android:layout_below="@+id/textView13"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:textColor="#FFFFFF"
                android:layout_marginLeft="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/help_title_play"
                android:id="@+id/textView15"
                android:layout_below="@+id/textView14"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="#0000ff"
                android:layout_marginTop="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/help_explain_play"
                android:id="@+id/textView16"
                android:layout_below="@+id/textView15"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/textView14"
                android:layout_alignEnd="@+id/textView14"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:textColor="#ffffff"
                android:singleLine="true" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
